# g04-final-project-c-14_bukan-dosen-so-we-gotta-git-gud

./: README.md  compose.dev.yaml  compose.prod.yaml  compose.yaml
backend/: Dockerfile  pyproject.toml
backend/src/backend/application/: bootstrap.py  config.py  event_handlers.py  main.py  message_parser.py
backend/src/backend/classroom/application/: classroom_service.py
backend/src/backend/classroom/domain/: class_payload.py  classroom.py  repository_interface.py  response.py
backend/src/backend/classroom/interface/: classroom_handler.py
backend/src/backend/classroom/repository/: classroom_repository.py
backend/src/backend/gamification/application/: gamification_service.py
backend/src/backend/gamification/domain/: repository_interface.py  response.py  student_provider.py
backend/src/backend/gamification/infrastructure/: classroom_student_provider.py
backend/src/backend/gamification/repository/: gamification_repository.py
backend/src/backend/quiz/application/: quiz_service.py
backend/src/backend/quiz/domain/: host_provider.py  quiz_payload.py  quiz_state.py  repository_interface.py  response.py
backend/src/backend/quiz/interface/: quiz_handler.py
backend/src/backend/quiz/repository/: host_provider_implementation.py  quiz_repository.py
backend/src/backend/shared/domain/: ws_envelope.py
backend/src/backend/shared/infrastructure/: ws_manager.py  ws_router.py
backend/tests/: test_application_event_handlers.py  test_classroom.py  test_dummy.py  test_gamification_service.py  test_main.py  test_message_parser.py  test_quiz_handler.py  test_quiz_service.py  test_reconnect.py  test_shared_broadcast.py  test_shared_event_bus.py  test_shared_room_registry.py  test_slide.py  test_websocket.py  test_websocket_router.py
worker/: Dockerfile  pyproject.toml
worker/src/: converter.py  main.py  publisher.py
worker/test/: test_converter.py  test_main.py
(+40 files in other folders)
